--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,4 +5,5 @@ edition = "2021"
 
 [dependencies]
 actix-web = { workspace = true }
+async-graphql = { workspace = true }
 async-graphql-actix-web = { workspace = true }
